# Support-of-3D-curves-hierarchy

./: CMakeLists.txt  README.md
src/: Makefile  figures.cc  figures.h  main.cc
src/generator/: generator.cc  generator.h
src/model/: abstract_figure.h  figures.cc  figures.h  point.cc  point.h
